# image-gallery-tgif

./: AGENTS.md  SPEC.md  pyproject.toml  requirements.txt
.agents/conventions/: code-layout.env  code-layout.md
docs/: PRD.md
src/gallery/: __init__.py
src/gallery/core/: __init__.py  engine.py  models.py
src/gallery/core/rules/: __init__.py  base.py  r1_default_photos.py  r2_mobile_collapse.py  r3_hover_animation.py  r4_lightbox.py  r5_filters.py
src/gallery/shell/: app.js  index.html  server.py  style.css
tests/: test_engine.py  test_r1_default_photos.py  test_r2_mobile_collapse.py  test_r3_hover_animation.py  test_r4_lightbox.py  test_r5_filters.py
