[project]
name = "gallery"
version = "0.1.0"
description = "Smart Photo Gallery pure decision core"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",  # rule classes are intentionally single-method
]
